Rendered viewport doesn't update with material actions #41236

Closed
opened 2014-07-29 18:15:23 +02:00 by David Gascueña · 7 comments

System Information
Ubuntu 64 14.04, Nvidia GTX 460

Blender Version
Broken: official 2.71 and built e0fd1bf (29-07-2014)

Short description of error

Exact steps for others to reproduce the error
matActionBug.blend

Enable the viewport rendered option, and change frame. The words doesn't update its transparencies, as it does when you render the animation. It happens when you push the action to an NLA track.

**System Information** Ubuntu 64 14.04, Nvidia GTX 460 **Blender Version** Broken: official 2.71 and built e0fd1bf (29-07-2014) **Short description of error** **Exact steps for others to reproduce the error** [matActionBug.blend](https://archive.blender.org/developer/F100178/matActionBug.blend) Enable the viewport rendered option, and change frame. The words doesn't update its transparencies, as it does when you render the animation. It happens when you push the action to an NLA track.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DavidGascuena

Added subscriber: @DavidGascuena
Sergey Sharybin self-assigned this 2014-07-31 14:52:57 +02:00

That's a bit tricky one, will try to fix.

That's a bit tricky one, will try to fix.

This issue was referenced by 54472df750

This issue was referenced by 54472df7507a0f5da027c8f8c41907e0b603385c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 54472df750.

Closed by commit 54472df750.

Thanks Sergey!

Thanks Sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41236
No description provided.